tests/ui/traits/const-traits/ice-124857-combine-effect-const-infer-vars.stderr
error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error[E0119]: conflicting implementations of trait `Foo` for type `i32`
  --> $DIR/ice-124857-combine-effect-const-infer-vars.rs:11:1
   |
LL | impl const Foo for i32 {}
   | ---------------------- first implementation here
LL |
LL | impl<T> const Foo for T where T: ~const Foo {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `i32`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0119`.
